--- a/src/GSvar/ReportVariantDialog.ui
+++ b/src/GSvar/ReportVariantDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>483</width>
-    <height>581</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,16 +40,6 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="3">
-    <widget class="QComboBox" name="type"/>
-   </item>
-   <item row="15" column="1" colspan="3">
-    <widget class="QCheckBox" name="exclude_mechanism">
-     <property name="text">
-      <string>pathomechanism not matching</string>
-     </property>
-    </widget>
-   </item>
    <item row="14" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_phenotype">
      <property name="text">
@@ -61,6 +51,16 @@
     <widget class="QCheckBox" name="exclude_artefact">
      <property name="text">
       <string>artefact</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" colspan="3">
+    <widget class="QComboBox" name="type"/>
+   </item>
+   <item row="15" column="1" colspan="3">
+    <widget class="QCheckBox" name="exclude_mechanism">
+     <property name="text">
+      <string>pathomechanism not matching</string>
      </property>
     </widget>
    </item>
@@ -77,6 +77,9 @@
      </property>
     </widget>
    </item>
+   <item row="19" column="1" colspan="3">
+    <widget class="QPlainTextEdit" name="comments2"/>
+   </item>
    <item row="13" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_frequency">
      <property name="text">
@@ -90,9 +93,6 @@
       <string/>
      </property>
     </widget>
-   </item>
-   <item row="19" column="1" colspan="3">
-    <widget class="QPlainTextEdit" name="comments2"/>
    </item>
    <item row="9" column="0">
     <widget class="QLabel" name="label_4">
@@ -129,6 +129,9 @@
       <string>Inhertitance mode of the variant.</string>
      </property>
     </widget>
+   </item>
+   <item row="18" column="1" colspan="3">
+    <widget class="QPlainTextEdit" name="comments"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label">
@@ -175,8 +178,18 @@
      </property>
     </widget>
    </item>
-   <item row="18" column="1" colspan="3">
-    <widget class="QPlainTextEdit" name="comments"/>
+   <item row="18" column="0">
+    <widget class="QLabel" name="label_6">
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comments of the first evaluation.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="text">
+      <string>comments:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
    </item>
    <item row="7" column="0">
     <widget class="QLabel" name="label_2">
@@ -192,19 +205,6 @@
     <widget class="QCheckBox" name="comp_het">
      <property name="text">
       <string>compound heterozygous</string>
-     </property>
-    </widget>
-   </item>
-   <item row="18" column="0">
-    <widget class="QLabel" name="label_6">
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comments of the first evaluation.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="text">
-      <string>comments:</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
     </widget>
    </item>
@@ -224,6 +224,13 @@
      </property>
     </widget>
    </item>
+   <item row="17" column="0" colspan="4">
+    <widget class="Line" name="line_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" colspan="4">
     <widget class="QLabel" name="variant">
      <property name="font">
@@ -237,10 +244,17 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1" colspan="3">
-    <widget class="QCheckBox" name="mosaic">
+   <item row="6" column="0" colspan="4">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_classification">
      <property name="text">
-      <string>mosaic</string>
+      <string>classifcation:</string>
      </property>
     </widget>
    </item>
@@ -257,29 +271,22 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="4">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="17" column="0" colspan="4">
-    <widget class="Line" name="line_3">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="label_classification">
+   <item row="9" column="1" colspan="3">
+    <widget class="QCheckBox" name="mosaic">
      <property name="text">
-      <string>classifcation:</string>
+      <string>mosaic</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1" colspan="3">
     <widget class="QComboBox" name="classification"/>
+   </item>
+   <item row="11" column="0" colspan="4">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </item>
    <item row="12" column="0" rowspan="5">
     <widget class="QLabel" name="label_7">
@@ -297,14 +304,7 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="0" colspan="4">
-    <widget class="Line" name="line_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="20" column="0" colspan="4">
+   <item row="23" column="0" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
       <number>3</number>
@@ -337,6 +337,23 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="21" column="0">
+    <widget class="QLabel" name="label_10">
+     <property name="text">
+      <string>RNA information:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="21" column="1" colspan="3">
+    <widget class="QComboBox" name="rna_info"/>
+   </item>
+   <item row="20" column="0" colspan="4">
+    <widget class="Line" name="line_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
