src/GSvar/ExpressionGeneWidget.*: renamed widgets
src/GSvar/ExpressionExonWidget.*: removed DB code/functions

src/cppNGSD-TEST/NGSD_Test.h: added tests for RNA exon import/statistics

src/cppNGSD-TEST/data_in/NGSD_*: added test data for RNA exon functions

--- a/src/GSvar/ExpressionGeneWidget.ui
+++ b/src/GSvar/ExpressionGeneWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ExpressionDataWidget</class>
- <widget class="QWidget" name="ExpressionDataWidget">
+ <class>ExpressionGeneWidget</class>
+ <widget class="QWidget" name="ExpressionGeneWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
