--- a/src/GSvar/VariantWidget.ui
+++ b/src/GSvar/VariantWidget.ui
@@ -500,6 +500,9 @@
           <property name="text">
            <string/>
           </property>
+          <property name="openExternalLinks">
+           <bool>true</bool>
+          </property>
           <property name="textInteractionFlags">
            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
           </property>
