--- a/src/GSvar/ReportVariantDialog.ui
+++ b/src/GSvar/ReportVariantDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>483</width>
-    <height>600</height>
+    <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -241,6 +241,9 @@
      </property>
      <property name="text">
       <string>Variant representation</string>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
      </property>
     </widget>
    </item>
