--- a/src/GSvar/ReportVariantDialog.ui
+++ b/src/GSvar/ReportVariantDialog.ui
@@ -33,8 +33,26 @@
    <property name="spacing">
     <number>3</number>
    </property>
-   <item row="2" column="1" colspan="3">
-    <widget class="QComboBox" name="type"/>
+   <item row="21" column="1" colspan="3">
+    <widget class="QLineEdit" name="manual_cnv_start">
+     <property name="placeholderText">
+      <string>genomic start position</string>
+     </property>
+    </widget>
+   </item>
+   <item row="20" column="0" colspan="4">
+    <widget class="Line" name="manual_line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="22" column="1" colspan="3">
+    <widget class="QLineEdit" name="manual_cnv_end">
+     <property name="placeholderText">
+      <string>genomic end position</string>
+     </property>
+    </widget>
    </item>
    <item row="14" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_phenotype">
@@ -42,6 +60,9 @@
       <string>phenotype not matching</string>
      </property>
     </widget>
+   </item>
+   <item row="2" column="1" colspan="3">
+    <widget class="QComboBox" name="type"/>
    </item>
    <item row="12" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_artefact">
@@ -54,13 +75,6 @@
     <widget class="QCheckBox" name="exclude_other">
      <property name="text">
       <string>other reason</string>
-     </property>
-    </widget>
-   </item>
-   <item row="15" column="1" colspan="3">
-    <widget class="QCheckBox" name="exclude_mechanism">
-     <property name="text">
-      <string>pathomechanism not matching</string>
      </property>
     </widget>
    </item>
@@ -81,6 +95,13 @@
     <widget class="QCheckBox" name="exclude_frequency">
      <property name="text">
       <string>frequency too high</string>
+     </property>
+    </widget>
+   </item>
+   <item row="15" column="1" colspan="3">
+    <widget class="QCheckBox" name="exclude_mechanism">
+     <property name="text">
+      <string>pathomechanism not matching</string>
      </property>
     </widget>
    </item>
@@ -113,13 +134,6 @@
      </property>
      <property name="wordWrap">
       <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="1" colspan="2">
-    <widget class="QComboBox" name="inheritance">
-     <property name="toolTip">
-      <string>Inhertitance mode of the variant.</string>
      </property>
     </widget>
    </item>
@@ -160,6 +174,13 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1" colspan="2">
+    <widget class="QComboBox" name="inheritance">
+     <property name="toolTip">
+      <string>Inhertitance mode of the variant.</string>
      </property>
     </widget>
    </item>
@@ -223,6 +244,13 @@
      </property>
     </widget>
    </item>
+   <item row="6" column="0" colspan="4">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
    <item row="7" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
@@ -233,10 +261,10 @@
      </property>
     </widget>
    </item>
-   <item row="10" column="1" colspan="3">
-    <widget class="QCheckBox" name="comp_het">
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_classification">
      <property name="text">
-      <string>compound heterozygous</string>
+      <string>classifcation:</string>
      </property>
     </widget>
    </item>
@@ -247,17 +275,26 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="label_classification">
+   <item row="10" column="1" colspan="3">
+    <widget class="QCheckBox" name="comp_het">
      <property name="text">
-      <string>classifcation:</string>
+      <string>compound heterozygous</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="4">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="12" column="0" rowspan="5">
+    <widget class="QLabel" name="label_7">
+     <property name="toolTip">
+      <string>Reasons why the variant is excluded from the report.</string>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;exclude from&lt;br/&gt;report:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -284,23 +321,7 @@
    <item row="5" column="1" colspan="3">
     <widget class="QComboBox" name="classification"/>
    </item>
-   <item row="12" column="0" rowspan="5">
-    <widget class="QLabel" name="label_7">
-     <property name="toolTip">
-      <string>Reasons why the variant is excluded from the report.</string>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;exclude from&lt;br/&gt;report:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="27" column="0" colspan="4">
+   <item row="28" column="0" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
       <number>3</number>
@@ -366,14 +387,14 @@
      </property>
     </widget>
    </item>
-   <item row="25" column="0">
+   <item row="26" column="0">
     <widget class="QLabel" name="label_10">
      <property name="text">
       <string>RNA information:</string>
      </property>
     </widget>
    </item>
-   <item row="25" column="1" colspan="3">
+   <item row="26" column="1" colspan="3">
     <widget class="QComboBox" name="rna_info"/>
    </item>
    <item row="21" column="0">
@@ -383,7 +404,7 @@
      </property>
     </widget>
    </item>
-   <item row="24" column="0" colspan="4">
+   <item row="25" column="0" colspan="4">
     <widget class="Line" name="line_5">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -397,16 +418,38 @@
      </property>
     </widget>
    </item>
-   <item row="22" column="1" colspan="3">
-    <widget class="QLineEdit" name="manual_cnv_end"/>
-   </item>
-   <item row="21" column="1" colspan="3">
-    <widget class="QLineEdit" name="manual_cnv_start"/>
-   </item>
-   <item row="20" column="0" colspan="4">
-    <widget class="Line" name="manual_line">
+   <item row="23" column="0" colspan="4">
+    <widget class="Line" name="manual_line_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="24" column="0">
+    <widget class="QLabel" name="manual_label_small_var">
+     <property name="text">
+      <string>manual variant</string>
+     </property>
+    </widget>
+   </item>
+   <item row="24" column="1">
+    <widget class="QLineEdit" name="manual_small_var">
+     <property name="placeholderText">
+      <string>variant in GSvar format</string>
+     </property>
+    </widget>
+   </item>
+   <item row="24" column="3">
+    <widget class="QToolButton" name="manual_small_var_import">
+     <property name="toolTip">
+      <string>Create variant using other formats.</string>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="GSvar.qrc">
+       <normaloff>:/Icons/Import.png</normaloff>:/Icons/Import.png</iconset>
      </property>
     </widget>
    </item>
